apps/slskd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slskd
  namespace: slskd
  labels:
    app: slskd
  annotations:
    ignore-check.kube-linter.io/run-as-non-root: "gluetun needs root."
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: slskd
  template:
    metadata:
      labels:
        app: slskd
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: slskd
          image: slskd/slskd:0.26.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5030
            - containerPort: 50300
          resources:
            requests:
              cpu: "100m"
              memory: "384Mi"
            limits:
              cpu: "500m"
              memory: "2Gi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          startupProbe:
            httpGet:
              path: /health
              port: 5030
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 90
          readinessProbe:
            httpGet:
              path: /health
              port: 5030
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5030
            periodSeconds: 10
            failureThreshold: 3

          volumeMounts:
            - name: slskd-configmap
              mountPath: /app/slskd.yml
              subPath: slskd.yml
            - name: slskd-data
              mountPath: /app
            - name: slskd-downloads
              mountPath: /downloads
            - name: slskd-library
              mountPath: /music
              readOnly: true
            - name: dotnet-tmp
              mountPath: /.net
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: slskd-configmap
          secret:
            secretName: slskd-configmap-secret
        - name: slskd-data
          persistentVolumeClaim:
            claimName: slskd-data-pvc
        - name: slskd-downloads
          persistentVolumeClaim:
            claimName: slskd-downloads-pvc
        - name: slskd-library
          persistentVolumeClaim:
            claimName: slskd-library-pvc
        - name: dotnet-tmp
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: gluetun-tmp
          emptyDir: {}
        - name: gluetun-data
          emptyDir: {}
        - name: tun-device
          hostPath:
            path: /dev/net/tun
