apps/slskd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd
  namespace: slskd
spec:
  selector:
    app: slskd
  ports:
    - port: 80
      targetPort: 5030
