apps/slskd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: slskd-lan
  namespace: slskd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`slskd.wevelsiep.com`)
      kind: Rule
      services:
        - name: slskd
          port: 80
