apps/slskd/cnp-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-app-ingress
  namespace: slskd
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
        - matchLabels:
            io.kubernetes.pod.namespace: needle
            app: needle
      toPorts:
        - ports:
            - port: "5030"
              protocol: TCP
